human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_15.wast
(assert_invalid
  (module (func $type-empty-f32 (result f32) (loop)))
  "type mismatch"
)